[package]
name = "rpc-server"
version = "0.1.0"
edition = "2021"
default-run = "rpc-server"

[[bin]]
name = "cmd"
path = "cmd/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.8", features = ["tls"] }
prost = "0.11"
chrono = "0.4.22"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
serde = "1.0.152"
serde_json = "1.0.91"
futures = "0.3.28"

[dependencies.mongodb]
version = "2.3.0"
features = ["tokio-sync", "bson-chrono-0_4"]

[build-dependencies]
tonic-build = "0.8"
dotenv = "0.15.0"
